<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/custom_dialog">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:text="@string/title_rate"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_16sdp"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/svn_timesnewromanbold"
            android:id="@+id/txtTitle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/info_rate"
            android:textColor="#767676"
            android:textSize="@dimen/_12sdp"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_18sdp"
            android:fontFamily="@font/svn_timesnewroman"
            android:id="@+id/txtValue"/>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:id="@+id/ratingBar"
            android:numStars="5"
            android:rating="5"
            android:stepSize="1"
            android:layout_marginBottom="@dimen/_10sdp"
            android:theme="@style/RatingBar"
            />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/black"
        android:alpha="0.2"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.99"
                android:text="@string/cancel"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:id="@+id/btnCancel"
                android:fontFamily="@font/svn_timesnewromanbold"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.01"
                android:background="@color/black"
                android:alpha="0.2"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.99"
                android:text="@string/evaluete"
                android:gravity="center"
                android:textColor="@color/evaluete"
                android:textSize="@dimen/_14sdp"
                android:id="@+id/btnEvaluete"
                android:fontFamily="@font/svn_timesnewromanbold"/>
        </LinearLayout>

</LinearLayout>