<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_color_all"
        android:weightSum="616">

        <RelativeLayout
            android:id="@+id/container_toolbar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="42">

            <include
                android:id="@+id/toolbar_main"
                layout="@layout/toolbar"
                />
            <ImageView
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_alignParentLeft="true"
                android:visibility="invisible"
                android:src="@drawable/back_ic"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_8sdp"
                android:id="@+id/btnBack"
                android:padding="@dimen/_6sdp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="574"
            android:orientation="vertical"
            android:weightSum="574"
            android:id="@+id/layout_view">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="538"
                android:id="@+id/layout_view_fragment"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <FrameLayout
                        android:id="@+id/content_frame"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/adView"/>
                    <com.google.android.gms.ads.AdView android:id="@+id/adView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        ads:adSize="@string/banner"
                        ads:adUnitId="@string/banner_home_footer"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:visibility="gone"
                        android:background="@android:color/transparent"/>
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="36"
                android:id="@+id/layout_control"
                android:background="@color/background_color_all">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:weightSum="100"
                    android:orientation="horizontal"
                    android:id="@+id/bottom_canhan"
                    android:background="@color/background_color_all">
                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="25"
                        android:id="@+id/btnAllChampion"
                        android:scaleType="centerInside"
                        android:src="@drawable/btn_all_champion_custom"
                        android:padding="@dimen/_5sdp"
                        android:background="@color/background_color_all"/>
                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="25"
                        android:id="@+id/btnAllRuneterras"
                        android:scaleType="centerInside"
                        android:src="@drawable/btn_all_runeterras_custom"
                        android:padding="@dimen/_5sdp"
                        android:background="@color/background_color_all"/>
                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="25"
                        android:id="@+id/btnCollections"
                        android:scaleType="centerInside"
                        android:src="@drawable/btn_collections_custom"
                        android:padding="@dimen/_5sdp"
                        android:background="@color/background_color_all"/>
                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="25"
                        android:id="@+id/btnMoreApp"
                        android:scaleType="centerInside"
                        android:src="@drawable/btn_more_app_custom"
                        android:padding="@dimen/_5sdp"
                        android:background="@color/background_color_all"/>
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_connect"
        android:textColor="@color/red"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/_15sdp"
        android:id="@+id/txtError"
        android:layout_marginBottom="@dimen/_3sdp"
        android:gravity="center"
        android:padding="@dimen/_3sdp"
        android:background="@color/background_color_all"
        android:visibility="gone"
        android:fontFamily="@font/svn_timesnewroman"/>
</RelativeLayout>